--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# EKS and helm related 
+cluster/*.pub
+cluster/*.pem
+cluster/cluster-abhi.yaml
+*.lock
+charts/
+test/
