feat: Add conditionals to helm templates (#6)

--- a/illumidesk/templates/efs_pvc.yaml
+++ b/illumidesk/templates/efs_pvc.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.allowEFS.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -11,3 +12,5 @@ spec:
   resources:
     requests:
       storage: 11Gi
+
+{{ end }}
