--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -1,3 +1,6 @@
+{{ if .Values.allowExternalDNS.enabled }}
+
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -71,3 +74,4 @@ spec:
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
         - --txt-owner-id= {{ .Values.txtOwnerID }}
+{{ end }}
