--- a/illumidesk/templates/efs_pv.yaml
+++ b/illumidesk/templates/efs_pv.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.allowEFS.enabled }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -11,8 +12,10 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: ""
   nfs:
-    server: {{ .Values.efs }}
-    path: "/"
+    server: {{ .Values.allowEFS.efs }}
+    path: printf "/mnt/efs/fs1/%s" .Values.allowEFS.orgName
+
+{{ end }}
 
 
   
