--- a/illumidesk/templates/rbac-role.yaml
+++ b/illumidesk/templates/rbac-role.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.albIngressController.enabled }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -61,3 +62,4 @@ metadata:
   name: alb-ingress-controller
   namespace: kube-system
 ...
+{{ end }}
