--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -68,10 +68,10 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter={{ .Values.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter={{ .Values.allowExternalDNS.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
-        - --txt-owner-id= {{ .Values.txtOwnerID }}
+        - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID }}
 {{ end }}
