--- a/illumidesk/templates/aws_credentials.yaml
+++ b/illumidesk/templates/aws_credentials.yaml
@@ -5,7 +5,7 @@ data:
   AWS_SECRET_ACCESS_KEY: {{ .Values.albIngressController.awsSecretToken | b64enc }}
 kind: Secret
 metadata:
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
   name: {{ .Release.Name }}-secrets
 type: Opaque
 {{ end }}
