--- a/illumidesk/templates/efs_pvc.yaml
+++ b/illumidesk/templates/efs_pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-shared-volume
-  namespace: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   volumeName: {{ .Release.Name }}-shared-volume
   storageClassName: ""
