--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -1,18 +1,18 @@
 {{ if .Values.allowExternalDNS.enabled }}
 
 
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: external-dns
-  namespace: default
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: external-dns
+#   namespace: {{ .Release.Namespace }}
 
----
+# ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: external-dns
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups: [""]
   resources: ["services"]
@@ -31,7 +31,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: external-dns-viewer
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -39,13 +39,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: external-dns
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
@@ -73,5 +73,6 @@ spec:
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
+        - --interval=30s
         - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID }}
 {{ end }}
