--- a/illumidesk/templates/aws_credentials.yaml
+++ b/illumidesk/templates/aws_credentials.yaml
@@ -1,8 +1,8 @@
-{{ if .Values.albIngressController.enabled }}
+{{ if .Values.alb_ingress_controller.enabled }}
 apiVersion: v1
 data:
-  AWS_ACCESS_KEY_ID: {{ .Values.albIngressController.awsAccessKey | b64enc }}
-  AWS_SECRET_ACCESS_KEY: {{ .Values.albIngressController.awsSecretToken | b64enc }}
+  AWS_ACCESS_KEY_ID: {{ .Values.alb_ingress_controller.aws_access_key | b64enc }}
+  AWS_SECRET_ACCESS_KEY: {{ .Values.alb_ingress_controller.aws_secret_token | b64enc }}
 kind: Secret
 metadata:
   namespace: {{ .Release.Namespace }}
