--- a/illumidesk/templates/efs_pv.yaml
+++ b/illumidesk/templates/efs_pv.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.allowEFS.enabled }}
+{{ if .Values.allow_efs.enabled }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -12,8 +12,8 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: ""
   nfs:
-    server: {{ .Values.allowEFS.efs }}
-    path: printf "/mnt/efs/fs1/%s" .Values.allowEFS.orgName
+    server: {{ .Values.allow_efs.efs }}
+    path: {{ .Values.allow_efs.orgName }}
 
 {{ end }}
 
