--- a/illumidesk/templates/alb_ingress.yaml
+++ b/illumidesk/templates/alb_ingress.yaml
@@ -1,22 +1,19 @@
-{{ if .Values.albIngressController.enabled }}
+{{ if .Values.alb_ingress_controller.enabled }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Release.Namespace }}-ingress 
   namespace: {{ .Release.Namespace }}
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/subnets: {{ .Values.albIngressController.subnets }}
-    alb.ingress.kubernetes.io/tags: {{ .Values.albIngressController.ingressTags }}
+  {{- range $key, $value := .Values.alb_ingress_controller.ingress.annotations }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
-    alb.ingress.kubernetes.io/certificate-arn: {{ .Values.albIngressController.certificate_arn}}
 spec:
 
   rules:
-  - host: {{ .Values.albIngressController.host }}
+  - host: {{ .Values.alb_ingress_controller.host }}
     http:
       paths:
       - path: /*
