--- a/illumidesk/templates/alb_ingress_controller.yaml
+++ b/illumidesk/templates/alb_ingress_controller.yaml
@@ -1,7 +1,7 @@
 # Application Load Balancer (ALB) Ingress Controller Deployment Manifest.
 # This manifest details sensible defaults for deploying an ALB Ingress Controller.
 # GitHub: https://github.com/kubernetes-sigs/aws-alb-ingress-controller
-{{ if .Values.albIngressController.enabled }}
+{{ if .Values.alb_ingress_controller.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,7 +26,7 @@ spec:
           args:
             # Limit the namespace where this ALB Ingress Controller deployment will
             # resolve ingress resources. If left commented, all namespaces are used.
-            #- --watch-namespace=jupyterhub
+            - --watch-namespace={{ .Release.Namespace }}
 
             # Setting the ingress-class flag below ensures that only ingress resources with the
             # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
@@ -37,10 +37,10 @@ spec:
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name={{ .Values.albIngressController.clusterName }}
+            - --cluster-name={{ .Values.alb_ingress_controller.cluster_name }}
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
-            - --aws-vpc-id={{ .Values.albIngressController.clusterVPC }}
+            - --aws-vpc-id={{ .Values.alb_ingress_controller.cluster_vpc }}
 
 
 
@@ -49,7 +49,7 @@ spec:
             # AWS region this ingress controller will operate in.
             # If unspecified, it will be discovered from ec2metadata.
             # kube of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
-            - --aws-region={{ .Values.albIngressController.awsRegion }}
+            - --aws-region={{ .Values.alb_ingress_controller.aws_region }}
 
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
