--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -1,13 +1,19 @@
-{{ if .Values.allowExternalDNS.enabled }}
+{{ if .Values.allow_external_dns.enabled }}
+
+{{ if .Values.allow_external_dns.enable_irsa }}
 
 
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   name: external-dns
-#   namespace: {{ .Release.Namespace }}
-
-# ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: external-dns
+  namespace: {{ .Release.Namespace }}
+annotations:
+    {{- range $key, $value := .Values.allow_external_dns.service_account.annotations }}
+      {{ $key }} : {{ $value }}
+    {{- end }}
+{{ end }}
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -40,6 +46,7 @@ subjects:
 - kind: ServiceAccount
   name: external-dns
   namespace: {{ .Release.Namespace }}
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -68,11 +75,11 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter={{ .Values.allowExternalDNS.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter={{ .Values.allow_external_dns.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
         - --interval=30s
-        - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID }}
+        - --txt-owner-id= {{ .Values.allow_external_dns.txtOwnerID }}
 {{ end }}
