--- a/illumidesk/Chart.yaml
+++ b/illumidesk/Chart.yaml
@@ -10,6 +10,14 @@ dependencies:
     import-values:
       - child: rbac
         parent: rbac
+  - name: postgresql
+    version: "9.8.4"
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
+  # - name: nfs-server-provisioner
+  #   version: "1.1.1"
+  #   repository: https://kubernetes-charts.storage.googleapis.com  
+  #   condition: nfs-server-provisioner.enabled
 maintainers:
   - name: IllumiDesk Team
     email: hello@illumidesk.com
