--- a/illumidesk/templates/alb-rbac-role.yaml
+++ b/illumidesk/templates/alb-rbac-role.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.alb_ingress_controller.enabled }}
+{{ if .Values.albIngressController.enabled }}
 
 
 ---
@@ -7,7 +7,7 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: alb-ingress-controller
-  name: alb-ingress-controller
+  name: alb-ingress-controller-{{.Release.Name}}
 rules:
   - apiGroups:
       - ""
@@ -46,25 +46,25 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: alb-ingress-controller
-  name: alb-ingress-controller
+  name: alb-ingress-controller-{{.Release.Name}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: alb-ingress-controller
+  name: alb-ingress-controller-{{.Release.Name}}
 subjects:
   - kind: ServiceAccount
     name: alb-ingress-controller
     namespace: {{ .Release.Namespace }}
 ---
 #if you are not using eksctl you create the cluster role
-{{ if .Values.alb_ingress_controller.enable_irsa }}
+{{ if .Values.albIngressController.enableIRSA }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/name: alb-ingress-controller
   annotations:
-    {{- range $key, $value := .Values.alb_ingress_controller.service_account.annotations }}
+    {{- range $key, $value := .Values.albIngressController.serviceAccount.annotations }}
       {{ $key }} : {{ $value }}
     {{- end }}
   name: alb-ingress-controller
