--- a/illumidesk/templates/alb_ingress.yaml
+++ b/illumidesk/templates/alb_ingress.yaml
@@ -1,11 +1,11 @@
-{{ if .Values.alb_ingress_controller.enabled }}
+{{ if .Values.albIngressController.enabled }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Release.Namespace }}-ingress 
   namespace: {{ .Release.Namespace }}
   annotations:
-  {{- range $key, $value := .Values.alb_ingress_controller.ingress.annotations }}
+  {{- range $key, $value := .Values.albIngressController.ingress.annotations }}
     {{ $key }}: {{ $value }}
   {{- end }}
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
@@ -13,7 +13,7 @@ metadata:
 spec:
 
   rules:
-  - host: {{ .Values.alb_ingress_controller.host }}
+  - host: {{ .Values.albIngressController.host }}
     http:
       paths:
       - path: /*
