--- a/illumidesk/templates/alb_ingress_controller.yaml
+++ b/illumidesk/templates/alb_ingress_controller.yaml
@@ -37,10 +37,10 @@ spec:
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name={{ .Values.albIngressController.cluster_name }}
+            - --cluster-name={{ .Values.albIngressController.clusterName }}
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
-            - --aws-vpc-id={{ .Values.albIngressController.cluster_vpc }}
+            - --aws-vpc-id={{ .Values.albIngressController.clusterVPC }}
 
 
 
@@ -49,7 +49,7 @@ spec:
             # AWS region this ingress controller will operate in.
             # If unspecified, it will be discovered from ec2metadata.
             # kube of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
-            - --aws-region={{ .Values.albIngressController.aws_region }}
+            - --aws-region={{ .Values.albIngressController.awsRegion }}
 
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
