--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -14,7 +14,7 @@ metadata:
   {{- end }}
 {{ end }}
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: external-dns-{{.Release.Name}}
@@ -33,7 +33,7 @@ rules:
   resources: ["nodes"]
   verbs: ["list"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: external-dns-viewer-{{.Release.Name}}
