feat: Improved support for namespaces (#16)

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,11 @@ test/*
 IAM/*
 TLDR.gif
 
-#will remove later
+
 scripts/*
+illumidesk/charts/
+illumidesk/kots/*
+illumidesk/kots/deps
+illumidesk/kots/manifests/*.tgz
+illumidesk/.helmignore
+test/
