--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -1,6 +1,6 @@
-{{ if .Values.allow_external_dns.enabled }}
+{{ if .Values.allowExternalDNS.enabled }}
 
-{{ if .Values.allow_external_dns.enable_irsa }}
+{{ if .Values.allowExternalDNS.enableIRSA }}
 
 
 apiVersion: v1
@@ -9,15 +9,15 @@ metadata:
   name: external-dns
   namespace: {{ .Release.Namespace }}
   annotations:
-    {{- range $key, $value := .Values.allow_external_dns.service_account.annotations }}
-      {{ $key }} : {{ $value }}
-    {{- end }}
+  {{- range $key, $value := .Values.allowExternalDNS.serviceAccount.annotations }}
+    {{ $key }} : {{ $value }}
+  {{- end }}
 {{ end }}
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: external-dns
+  name: external-dns-{{.Release.Name}}
   namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups: [""]
@@ -33,15 +33,15 @@ rules:
   resources: ["nodes"]
   verbs: ["list"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: external-dns-viewer
+  name: external-dns-viewer-{{.Release.Name}}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: external-dns
+  name: external-dns-{{.Release.Name}}
 subjects:
 - kind: ServiceAccount
   name: external-dns
@@ -74,11 +74,11 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter={{ .Values.allow_external_dns.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter={{ .Values.allowExternalDNS.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
         - --interval=30s
-        - --txt-owner-id= {{ .Values.allow_external_dns.txtOwnerID }}
+        - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID }}
 {{ end }}
