--- a/illumidesk/templates/nginx_ingress_controller.yaml
+++ b/illumidesk/templates/nginx_ingress_controller.yaml
@@ -8,7 +8,7 @@
 #     app.kubernetes.io/instance: ingress-nginx
 
 # ---
-{{ if .Values.nginx_ingress_controller.enabled }}
+{{ if .Values.nginxIngressController.enabled }}
 # Source: ingress-nginx/templates/controller-serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -42,7 +42,7 @@ data:
       listen 2443;
       return 308 https://$host$request_uri;
     }
-  proxy-real-ip-cidr: {{ .Values.nginx_ingress_controller.vpc_cidr }}
+  proxy-real-ip-cidr: {{ .Values.nginxIngressController.vpcCIDR }}
   use-forwarded-headers: 'true'
 ---
 # Source: ingress-nginx/templates/clusterrole.yaml
@@ -55,7 +55,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
 rules:
   - apiGroups:
       - ''
@@ -125,11 +125,11 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
@@ -146,7 +146,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
@@ -241,12 +241,12 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ingress-nginx
+  name: ingress-nginx-{{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
@@ -284,7 +284,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
     service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '60'
     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: {{ .Values.nginx_ingress_controller.certificate_arn }}
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: {{ .Values.nginxIngressController.certificateArn }}
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
     service.beta.kubernetes.io/aws-load-balancer-type: elb
   labels:
@@ -440,7 +440,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  name: ingress-nginx-admission
+  name: ingress-nginx-admission-{{ .Release.Name }}
 webhooks:
   - name: validate.nginx.ingress.kubernetes.io
     rules:
