--- a/illumidesk/Chart.yaml
+++ b/illumidesk/Chart.yaml
@@ -14,10 +14,14 @@ dependencies:
     version: "9.8.4"
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
-  # - name: nfs-server-provisioner
-  #   version: "1.1.1"
-  #   repository: https://kubernetes-charts.storage.googleapis.com  
-  #   condition: nfs-server-provisioner.enabled
+  - name: datadog
+    version: "2.4.29"
+    repository: https://helm.datadoghq.com
+    condition: datadog.enabled
+  - name: kube-state-metrics
+    version: "2.9.1"
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: kube-state-metrics.enabled
 maintainers:
   - name: IllumiDesk Team
     email: hello@illumidesk.com
