--- a/images/jupyterhub/Dockerfile.k8
+++ b/images/jupyterhub/Dockerfile.k8
@@ -1,7 +1,6 @@
-FROM jupyter/base-notebook:b2562c469cdd AS builder
+FROM jupyter/base-notebook:python-3.8.6 AS builder
 
-ARG BASE_IMAGE=illumidesk/jupyterhub:py3.8
-FROM $BASE_IMAGE
+
 
 USER root
 
@@ -14,21 +13,24 @@ ENV NB_UID="${NB_UID}"
 ENV NB_GID="${NB_GID}"
 ENV HOME="/home/${NB_USER}"
 
-RUN adduser --disabled-password \
-    --gecos "Default user" \
-    --uid "${NB_UID}" \
-    --gid "${NB_GID}" \
-    --home "${HOME}" \
-    --force-badname \
-    "${NB_USER}"
+# RUN adduser --disabled-password \
+#     --gecos "Default user" \
+#     --uid "${NB_UID}" \
+#     --gid "${NB_GID}" \
+#     --home "${HOME}" \
+#     --force-badname \
+#     "${NB_USER}"
 
-# Copy a script that we will use to update permissions
-COPY --from=builder /usr/local/bin/fix-permissions /usr/local/bin/
-RUN chmod a+rx /usr/local/bin/fix-permissions
+#update user with group id
+#RUN usermod --gid "${NB_GID}" "${NB_USER}"
 
-# Allows user with membership to NB_GID to write data
-RUN fix-permissions /srv/jupyterhub \
- && fix-permissions /etc/jupyterhub
+# # Copy a script that we will use to update permissions
+# COPY --from=builder /usr/local/bin/fix-permissions /usr/local/bin/
+# RUN chmod a+rx /usr/local/bin/fix-permissions
+
+# # Allows user with membership to NB_GID to write data
+# RUN fix-permissions /srv/jupyterhub \
+#  && fix-permissions /etc/jupyterhub
 
 WORKDIR /srv/jupyterhub
 
