--- a/illumidesk/templates/nfs_pv.yaml
+++ b/illumidesk/templates/nfs_pv.yaml
@@ -1,8 +1,8 @@
-{{ if .Values.allowEFS.enabled }}
+{{ if .Values.allowNFS.enabled }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Release.Name }}-shared-volume
+  name: {{.Release.Name }}-shared-volume
 spec:
   capacity:
     storage: 20Gi
@@ -12,10 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: ""
   nfs:
-    server: {{ .Values.allowEFS.efs }}
-    path: {{ .Values.allowEFS.orgName }}
+    server: {{ .Values.allowNFS.server }}
+    path: {{ .Values.allowNFS.path }}
 
 {{ end }}
-
-
-  
