--- a/illumidesk/templates/nfs_pvc.yaml
+++ b/illumidesk/templates/nfs_pvc.yaml
@@ -1,11 +1,11 @@
-{{ if .Values.allowEFS.enabled }}
+{{ if .Values.allowNFS.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ .Release.Name }}-shared-volume
+  name: {{.Release.Name }}-shared-volume
   namespace: {{ .Release.Namespace }}
 spec:
-  volumeName: {{ .Release.Name }}-shared-volume
+  volumeName: {{.Release.Name }}-shared-volume
   storageClassName: ""
   accessModes:
     - ReadWriteMany
