--- a/illumidesk/templates/nginx_ingress_controller.yaml
+++ b/illumidesk/templates/nginx_ingress_controller.yaml
@@ -1,14 +1,14 @@
-
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: ingress-nginx
-#   labels:
-#     app.kubernetes.io/name: ingress-nginx
-#     app.kubernetes.io/instance: ingress-nginx
+{{ if .Values.nginxIngressController.enabled }}
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ingress-nginx
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
 
 # ---
-{{ if .Values.nginxIngressController.enabled }}
+
 # Source: ingress-nginx/templates/controller-serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -21,7 +21,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/controller-configmap.yaml
 apiVersion: v1
@@ -35,7 +35,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 data:
   http-snippet: |
     server {
@@ -55,7 +55,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
-  name: ingress-nginx-{{ .Release.Name }}
+  name: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -125,15 +125,15 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
-  name: ingress-nginx-{{ .Release.Name }}
+  name: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ingress-nginx-{{ .Release.Name }}
+  name: ingress-nginx
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
-    namespace: {{ .Release.Namespace }}
+    namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/controller-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -146,8 +146,8 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-  name: ingress-nginx-{{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: ingress-nginx
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -241,16 +241,16 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-  name: ingress-nginx-{{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: ingress-nginx
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ingress-nginx-{{ .Release.Name }}
+  name: ingress-nginx
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
-    namespace: {{ .Release.Namespace }}
+    namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/controller-service-webhook.yaml
 apiVersion: v1
@@ -264,7 +264,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller-admission
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 spec:
   type: ClusterIP
   ports:
@@ -295,7 +295,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
@@ -325,7 +325,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 spec:
   selector:
     matchLabels:
@@ -461,7 +461,7 @@ webhooks:
       - v1beta1
     clientConfig:
       service:
-        namespace: {{ .Release.Namespace }}
+        namespace: ingress-nginx
         name: ingress-nginx-controller-admission
         path: /networking/v1beta1/ingresses
 ---
@@ -480,7 +480,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/admission-webhooks/job-patch/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -528,7 +528,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx-admission
-    namespace: {{ .Release.Namespace }}
+    namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/admission-webhooks/job-patch/role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -545,7 +545,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -570,7 +570,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -578,7 +578,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx-admission
-    namespace: {{ .Release.Namespace }}
+    namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/admission-webhooks/job-patch/job-createSecret.yaml
 apiVersion: batch/v1
@@ -595,7 +595,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 spec:
   template:
     metadata:
@@ -643,7 +643,7 @@ metadata:
     app.kubernetes.io/version: 0.40.1
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: {{ .Release.Namespace }}
+  namespace: ingress-nginx
 spec:
   template:
     metadata:
