--- a/illumidesk/templates/aws_credentials.yaml
+++ b/illumidesk/templates/aws_credentials.yaml
@@ -6,6 +6,6 @@ data:
 kind: Secret
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ .Release.Name }}-secrets
+  name: secrets-{{ .Release.Name }}
 type: Opaque
 {{ end }}
