--- a/illumidesk/templates/alb-rbac-role.yaml
+++ b/illumidesk/templates/alb-rbac-role.yaml
@@ -1,13 +1,11 @@
 {{ if .Values.albIngressController.enabled }}
-
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: alb-ingress-controller
-  name: alb-ingress-controller-{{.Release.Name}}
+    app.kubernetes.io/name: alb-ingress-controller-{{ .Release.Name }}
+  name: alb-ingress-controller-{{ .Release.Name }}
 rules:
   - apiGroups:
       - ""
@@ -45,18 +43,18 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/name: alb-ingress-controller
-  name: alb-ingress-controller-{{.Release.Name}}
+    app.kubernetes.io/name: alb-ingress-controller-{{ .Release.Name }}
+  name: alb-ingress-controller-{{ .Release.Name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: alb-ingress-controller-{{.Release.Name}}
+  name: alb-ingress-controller-{{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
     name: alb-ingress-controller
     namespace: {{ .Release.Namespace }}
 ---
-#if you are not using eksctl you create the cluster role
+
 {{ if .Values.albIngressController.enableIRSA }}
 apiVersion: v1
 kind: ServiceAccount
