--- a/illumidesk/templates/alb_ingress.yaml
+++ b/illumidesk/templates/alb_ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: {{ .Release.Namespace }}-ingress 
+  name: ingress-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   annotations:
   {{- range $key, $value := .Values.albIngressController.ingress.annotations }}
