--- a/illumidesk/templates/alb_ingress_controller.yaml
+++ b/illumidesk/templates/alb_ingress_controller.yaml
@@ -13,6 +13,7 @@ metadata:
   # namespace scope, see --watch-namespace.
   namespace: {{ .Release.Namespace }}
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: alb-ingress-controller
@@ -66,13 +67,13 @@ spec:
              - name: AWS_ACCESS_KEY_ID
                valueFrom: 
                 secretKeyRef:
-                  name: {{ .Release.Name }}-secrets
+                  name: secrets-{{ .Release.Name }}
                   key: AWS_ACCESS_KEY_ID
 
              - name: AWS_SECRET_ACCESS_KEY
                valueFrom: 
                 secretKeyRef:
-                  name: {{ .Release.Name }}-secrets
+                  name: secrets-{{ .Release.Name }}
                   key: AWS_SECRET_ACCESS_KEY
                   
 
