--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -17,7 +17,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: external-dns-{{.Release.Name}}
+  name: external-dns-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups: [""]
@@ -36,12 +36,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: external-dns-viewer-{{.Release.Name}}
+  name: external-dns-viewer-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: external-dns-{{.Release.Name}}
+  name: external-dns-{{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
   name: external-dns
@@ -53,6 +53,7 @@ metadata:
   name: external-dns
   namespace: {{ .Release.Namespace }}
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: external-dns
@@ -74,11 +75,11 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter={{ .Values.allowExternalDNS.domainFilter }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter={{ .Values.allowExternalDNS.domainFilter | default "illumidesk.com" }} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
         - --interval=30s
-        - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID }}
+        - --txt-owner-id= {{ .Values.allowExternalDNS.txtOwnerID | default "illumidesk" }}
 {{ end }}
