--- a/illumidesk/templates/grader_pv.yaml
+++ b/illumidesk/templates/grader_pv.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{.Release.Name }}-shared-volume
+  name: grader-pv-{{ .Release.Name }}
 spec:
   capacity:
     storage: 20Gi
