--- a/illumidesk/templates/shared_pvc.yaml
+++ b/illumidesk/templates/shared_pvc.yaml
@@ -1,16 +1,16 @@
+
 {{ if .Values.allowNFS.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{.Release.Name }}-shared-volume
+  name: shared-pvc-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  volumeName: {{.Release.Name }}-shared-volume
+  volumeName: shared-pv-{{ .Release.Name }}
   storageClassName: ""
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 11Gi
-
 {{ end }}
