refactor: add graderSetupService and allowNFS default values (#29)

--- a/illumidesk/values.yaml
+++ b/illumidesk/values.yaml
@@ -68,5 +68,10 @@ allowExternalDNS:
 nginxIngressController:
   enabled: false
   host: 'test'
+allowNFS:
+  enabled: false
+graderSetupService:
+  enabled: false
+
 
 
