refactor: Allows for custom grader-setup-service registry domain, namespace, and tag (#34)

--- a/illumidesk/templates/grader_setup_service.yaml
+++ b/illumidesk/templates/grader_setup_service.yaml
@@ -100,7 +100,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: grader-setup-container
-          image: illumidesk/grader-setup-app:latest
+          image: {{ .Values.graderSetupService.graderSetupImage }}
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
