--- a/images/jupyterhub/Dockerfile
+++ b/images/jupyterhub/Dockerfile
@@ -1,4 +1,5 @@
-FROM jupyterhub/k8s-hub:0.9.1
+ARG BASE_IMAGE=jupyterhub/k8s-hub:0.9.1
+FROM "${BASE_IMAGE}"
 
 # ensure pip is up to date
 RUN python3 -m pip install --upgrade pip
