--- a/illumidesk/templates/aws_credentials.yaml
+++ b/illumidesk/templates/aws_credentials.yaml
@@ -5,7 +5,7 @@ data:
   AWS_SECRET_ACCESS_KEY: {{ .Values.albIngressController.awsSecretToken | b64enc }}
 kind: Secret
 metadata:
-  namespace: {{ .Release.Namespace }}
-  name: secrets-{{ .Release.Name }}
+  namespace: kube-system
+  name: secrets-alb-ingress-controller
 type: Opaque
 {{ end }}
