--- a/illumidesk/values.yaml
+++ b/illumidesk/values.yaml
@@ -59,6 +59,9 @@ albIngressController:
   enabled: false
   enableIRSA: false
 
+albIngress:
+  enabled: false
+
 allowExternalDNS: 
   enabled: false
   enableIRSA: false
