--- a/illumidesk/templates/alb-rbac-role.yaml
+++ b/illumidesk/templates/alb-rbac-role.yaml
@@ -4,8 +4,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: alb-ingress-controller-{{ .Release.Name }}
-  name: alb-ingress-controller-{{ .Release.Name }}
+    app.kubernetes.io/name: alb-ingress-controller
+  name: alb-ingress-controller
 rules:
   - apiGroups:
       - ""
@@ -43,16 +43,16 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/name: alb-ingress-controller-{{ .Release.Name }}
-  name: alb-ingress-controller-{{ .Release.Name }}
+    app.kubernetes.io/name: alb-ingress-controller
+  name: alb-ingress-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: alb-ingress-controller-{{ .Release.Name }}
+  name: alb-ingress-controller
 subjects:
   - kind: ServiceAccount
     name: alb-ingress-controller
-    namespace: {{ .Release.Namespace }}
+    namespace: kube-system
 ---
 
 {{ if .Values.albIngressController.enableIRSA }}
@@ -66,7 +66,7 @@ metadata:
       {{ $key }} : {{ $value }}
     {{- end }}
   name: alb-ingress-controller
-  namespace: {{ .Release.Namespace }}
+  namespace: kube-system
 ...
 {{ end }}
 {{ end }}
