--- a/illumidesk/templates/alb_ingress.yaml
+++ b/illumidesk/templates/alb_ingress.yaml
@@ -1,11 +1,11 @@
-{{ if .Values.albIngressController.enabled }}
+{{ if .Values.albIngress.enabled }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   annotations:
-  {{- range $key, $value := .Values.albIngressController.ingress.annotations }}
+  {{- range $key, $value := .Values.albIngress.ingress.annotations }}
     {{ $key }}: {{ $value }}
   {{- end }}
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
@@ -13,7 +13,7 @@ metadata:
 spec:
 
   rules:
-  - host: {{ .Values.albIngressController.host }}
+  - host: {{ .Values.albIngress.host }}
     http:
       paths:
       - path: /*
