--- a/illumidesk/templates/external-dns.yaml
+++ b/illumidesk/templates/external-dns.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
-  namespace: {{ .Release.Namespace }}
+  namespace: kube-system
   annotations:
   {{- range $key, $value := .Values.allowExternalDNS.serviceAccount.annotations }}
     {{ $key }} : {{ $value }}
@@ -17,8 +17,8 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: external-dns-{{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: external-dns
+  namespace: kube-system
 rules:
 - apiGroups: [""]
   resources: ["services"]
@@ -39,22 +39,22 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: external-dns-viewer-{{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: external-dns-viewer
+  namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: external-dns-{{ .Release.Name }}
+  name: external-dns
 subjects:
 - kind: ServiceAccount
   name: external-dns
-  namespace: {{ .Release.Namespace }}
+  namespace: kube-system
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
-  namespace: {{ .Release.Namespace }}
+  namespace: kube-system
 spec:
   replicas: 1
   selector:
