feat: Adds keycloak and upgrades nginx ingress (#51)

--- a/illumidesk/templates/nginx_ingress.yaml
+++ b/illumidesk/templates/nginx_ingress.yaml
@@ -1,23 +1,28 @@
 #use this
 {{ if .Values.nginxIngress.enabled }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-{{ .Release.Name }}
   namespace:  {{ .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "Content-Security-Policy: default-src 'self' *;";
+      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains";
+      more_set_headers "X-Frame-Options: DENY";
+      more_set_headers "X-Forwarded-Proto: https;"
 spec:
-  # tls:
-  # - hosts:
-  #     - apple.illumidesk.com
-  #   secretName: testsecret-tls
   rules:
-  - host: {{.Values.nginxIngress.host}}
+  - host: {{ .Values.nginxIngress.host }}
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-public
             servicePort: 80
+        - path: /auth
+          backend:
+            serviceName: keycloak
+            servicePort: 8080
 {{ end }}
