--- a/illumidesk/templates/nginx_ingress_controller.yaml
+++ b/illumidesk/templates/nginx_ingress_controller.yaml
@@ -411,20 +411,20 @@ spec:
             - name: webhook
               containerPort: 8443
               protocol: TCP
-          volumeMounts:
-            - name: webhook-cert
-              mountPath: /usr/local/certificates/
-              readOnly: true
+          # volumeMounts:
+          #   - name: webhook-cert
+          #     mountPath: /usr/local/certificates/
+          #     readOnly: true
           resources:
             requests:
               cpu: 100m
               memory: 90Mi
       serviceAccountName: ingress-nginx
       terminationGracePeriodSeconds: 300
-      volumes:
-        - name: webhook-cert
-          secret:
-            secretName: ingress-nginx-admission
+      # volumes:
+      #   - name: webhook-cert
+      #     secret:
+      #       secretName: ingress-nginx-admission
 ---
 # Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
 # before changing this value, check the required kubernetes version
@@ -677,3 +677,4 @@ spec:
 #         runAsNonRoot: true
 #         runAsUser: 2000
 {{ end }}
+
