chore(deps): Bump illumidesk version to v1.1.1 (#76)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore custom config
 custom-config.yaml
 
+# Ignore packaged charts
+*.tgz
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
