--- a/images/jupyterhub/Dockerfile
+++ b/images/jupyterhub/Dockerfile
@@ -1,13 +1,26 @@
 ARG BASE_IMAGE=jupyterhub/k8s-hub:0.11.1
 FROM "${BASE_IMAGE}"
 
+ARG ILLUMIDESK_VERSION=1.1.1
+
+USER root
+
 # ensure pip is up to date
-RUN python3 -m pip install --upgrade pip
+RUN apt-get update \
+ && apt-get upgrade -y \
+ && apt-get install unzip wget \
+ && python3 -m pip install --upgrade pip
 
 COPY requirements.txt /tmp/
 RUN pip install -r /tmp/requirements.txt
 
-COPY illumidesk.zip /tmp/illumidesk.zip
-RUN pip install --upgrade --force-reinstall /tmp/illumidesk.zip
+USER "${NB_UID}"
+
+WORKDIR /tmp
+RUN wget "https://github.com/IllumiDesk/illumidesk/archive/v${ILLUMIDESK_VERSION}.zip" -O /tmp/illumidesk.zip \
+ && unzip /tmp/illumidesk.zip \
+ && python3 -m pip install --upgrade --force-reinstall /tmp/illumidesk-1.0.0/src/illumidesk/.
 
 COPY --chown=1000:100 illumidesk-80.png /srv/jupyterhub/illumidesk-80.png
+
+WORKDIR /srv/jupyterhub
