--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -3,7 +3,15 @@
 # Create and use roles and service accounts on an RBAC enabled cluster.
 rbac:
   enabled: true
-  
+
+## String to partially override illumidesk.fullname template (will maintain the release name)
+##
+# nameOverride:
+
+## String to fully override illumidesk.fullname template
+##
+# fullnameOverride:
+
 jupyterhub:
 # Helm config for jupyterhub goes here
 # See https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
@@ -64,7 +72,7 @@ albIngressController:
 albIngress:
   enabled: false
 
-allowExternalDNS: 
+allowExternalDNS:
   enabled: false
   enableIRSA: false
 
@@ -79,9 +87,6 @@ allowNFS:
   enabled: false
 
 keyCloak:
-  enabled: false
-
-keycloak:
   enabled: false
 
 graderSetupService:
